Fixed some issues regarding the background color on mobile devices

--- a/style.css
+++ b/style.css
@@ -89,9 +89,10 @@ main {
     flex-direction: column;
     flex-wrap: wrap;
     max-width: 885px;
+    
     align-items: center;
     margin: auto auto auto auto;
-    min-height: 90.5vh;
+    min-height: 977px;
 }
 
 .main-section {
@@ -253,8 +254,8 @@ footer a{
     /*Sends footer to the bottom in pages 
     without enough content to scroll down.*/
     width: 100%;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    bottom: 0vh;
 }
 
 @media screen and (max-width:820px) {
@@ -272,6 +273,12 @@ footer a{
     .project-list-container {
         display: flex;
         justify-content: center;
+    }
+
+    body {
+        /*background-color: #16161a;*/
+        background-image: linear-gradient(#16161a, #242629 70%);
+        
     }
 
     .projects {
@@ -297,12 +304,13 @@ footer a{
         margin-bottom: 3px;
     }
 
-    /*
+    
+    
     main{
         
-        min-height: 900px;
+        min-height: 850px;
     }
-*/
+
     .projects {
         display: flex;
         flex-wrap: wrap;
